# AquaBle-dev

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  TODO.md  aquable.code-workspace  package-lock.json  package.json  pyproject.toml  repository.yaml  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: build-addon.yaml  build-deploy.yml  build-dev.yml  dev-build.yml  release.yml
aquable/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: Roadmap.md  TODO.md  deployment-sync.md  device-cards.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: constants.ts  errors.ts  productionMain.ts  style.css  utils.ts
frontend/tests/: percentages-test.html  test-hub.html  wattage-test.html
hassio/: Dockerfile  README.md  config.yaml  run.sh
scripts/: build-all.sh  bump_version.sh  test_addon_local.sh
src/aquable/: __main__.py  atomic_config.py  base_device_storage.py  ble_service.py  command_executor.py  commands_model.py  config_helpers.py  config_migration.py  constants.py  doser_status.py  doser_storage.py  env_utils.py  errors.py  global_settings.py  light_status.py  light_storage.py  logging_config.py  schemas.py  serializers.py  service.py  spa.py  storage_migration.py  storage_utils.py  time_utils.py  timezone_utils.py  unified_device_storage.py
src/aquarium_device_manager/: atomic_config.py  ble_service.py  command_executor.py  commands_model.py  config_helpers.py  doser_storage.py  errors.py  global_settings.py  light_storage.py  (+4 more)
tests/: conftest.py  test_api_configurations.py  test_atomic_config.py  test_command_executor.py  test_command_validation.py  test_commands.py  test_config_storage_integration.py  test_doser_lifetime_totals.py  test_doser_status.py  test_doser_storage.py  test_doser_time_tolerance.py  test_encoder_checksum_collision.py  test_encoder_sanitization.py  test_ha_client.py  test_ha_storage.py  test_ingress.py  test_integration_metadata_fix.py  test_light_status.py  test_light_storage.py  test_logging_config.py  test_message_id.py  test_metadata_filtering.py  test_name_based_import.py  test_old_format_import.py  test_service_auto_discover.py  test_service_endpoints.py  test_spa.py  test_status_wait_env.py  test_user_import_scenario.py
(+102 files in other folders)
