[build-system]
requires = [
    "setuptools==76.0.0",
    "setuptools_scm[toml]==8.2.0",
    "wheel==0.45.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "aquable"
version = "2.1.0"
description = "Python service for controlling aquarium devices over Bluetooth Low Energy"
readme = "README.md"

requires-python = ">=3.10"

dependencies = [
    "bleak==0.22.3",
    "bleak_retry_connector==3.9.0",
    "typer[all]==0.15.2",
    "rich==13.9.4",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.5",
    "jinja2==3.1.4",
    "python-multipart==0.0.9",
    "httpx==0.27.2",
]

[project.urls]
"Source Code" = "https://github.com/calebvenner/aquable"
"Bug Reports" = "https://github.com/calebvenner/aquable/issues"
"Original Project" = "https://github.com/TheMicDiet/chihiros-led-control"

[tool.setuptools]
platforms = ["any"]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = [
  "src",
]

[tool.setuptools_scm]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",
]
extend-exclude = [
    "archive",
    "frontend/.venv",
]

[tool.doc8]
max-line-length = 100
